app fully functional using case statment

--- a/views/food/burritos.erb
+++ b/views/food/burritos.erb
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title><%= @title %></title>
   </head>
   <body>
-    <h1>Pages with burritos</h1>
+    <h1>Burritos</h1>
   </body>
 </html>
