--- a/views/food/enchiladas.erb
+++ b/views/food/enchiladas.erb
@@ -5,6 +5,6 @@
     <title><%= @title %></title>
   </head>
   <body>
-    <h1>Enchiladas</h1>
+    <h1>Enchiladas <%= @id %></h1>
   </body>
 </html>
