--- a/views/food/index.erb
+++ b/views/food/index.erb
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="<%= ('/style.css') %>" rel="stylesheet" type="text/css" >
+    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" >
     <title><%= @tittle %></title>
   </head>
   <body>
     <h1> Welcome to the Mexican food website</h1>
-    <img src="images/01.png" alt="mexican">
+    <img src="/images/mexicanguy.png" alt="mexican">
   </body>
 </html>
