fixed the css stylesheet links. Changed case statement

--- a/views/food/index.erb
+++ b/views/food/index.erb
@@ -2,11 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" >
     <title><%= @tittle %></title>
+    <link  rel="stylesheet" type="text/css" href="/stylesheets/style.css">
   </head>
   <body>
     <h1> Welcome to the Mexican food website</h1>
+      <h1> Bienvenido</h1>
     <img src="/images/mexicanguy.png" alt="mexican">
   </body>
 </html>
