--- a/views/food/enchiladas.erb
+++ b/views/food/enchiladas.erb
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title><%= @title %></title>
+    <link  rel="stylesheet" type="text/css" href="/stylesheets/style.css">
   </head>
   <body>
     <h1>Enchiladas <%= @id %></h1>
+    <img src="/images/enchiladas.jpg" alt="enchiladas">
   </body>
 </html>
